--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "fast-xml-parser": "^5.3.0",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
-    "next": "15.5.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "react-imask": "^7.6.1",
     "tailwind-merge": "^3.3.1",
